syntax = "proto3";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "akkaserverless/annotations.proto";

import "persistence/pc_childdevice_domain.proto";

package com.lightbend.gsa.parentalcontrol.childdevice.actions;

service PublishParentInfoService {
  rpc PublishParentAdded(com.lightbend.gsa.parentalcontrol.childdevice.persistence.ParentAdded) returns (com.lightbend.gsa.parentalcontrol.childdevice.persistence.ParentAdded) {
    option (akkaserverless.method).eventing = {
      in: {
        event_sourced_entity: "ChildDeviceEntity";
      }
      out: {
        topic: "pc-childdevice-parent";
      }
    };
  }

  rpc PublishParentRemoved(com.lightbend.gsa.parentalcontrol.childdevice.persistence.ParentRemoved) returns (com.lightbend.gsa.parentalcontrol.childdevice.persistence.ParentRemoved) {
    option (akkaserverless.method).eventing = {
      in: {
        event_sourced_entity: "ChildDeviceEntity";
      }
      out: {
        topic: "pc-childdevice-parent";
      }
    };
  }

  // handle other events which are not managed above
  rpc CatchOthers(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity:  "ChildDeviceEntity"
    };
  }

}
